<resources>
    <string name="app_name">BrawlMobile</string>
    <string name="fragment_error_txt">Check internet connection and restart the app</string>
    <string name="insert_your_personal_tag">Insert Your Personal Tag</string>
    <string name="not_valid_player_tag">TAG non corretto o inesistente</string>
    <string name="submit_tag">SUBMIT</string>

    <!-- CONTENT DESCRIPTION -->
    <string name="remove_item_from_favourite">Remove Item From Favourite</string>
    <string name="add_to_favourite">add to favourite</string>
    <string name="card_image_medium">card image medium</string>
    <string name="brawl_bg">Brawl Stars background</string>
    <string name="clash_royale_bg">Clash Royale background</string>
    <string name="card_image_evolution_medium">Card Image Evolution Medium</string>
    <string name="img_default_skin">imgDefaultSkin</string>
    <string name="img_first_gadget">imgFirstGadget</string>
    <string name="img_second_gadget">imgSecondGadget</string>
    <string name="img_first_starpower">imgFirstStarPower</string>
    <string name="img_second_starpower">imgSecondStarPower</string>
    <string name="favourite_item_img">Favourite Item Img</string>
    <string name="brawler_sprite">brawler sprite</string>

    <!-- BRAWL STARS -->
    <string name="favourite_brawlers">Favourite Brawlers</string>
    <string name="header_player_information">Player Information</string>
    <string name="name">Name:</string>
    <string name="tag">Tag:</string>
    <string name="header_trophies">Trophies</string>
    <string name="highest">Highest:</string>
    <string name="total">Total:</string>
    <string name="header_exp">Exp</string>
    <string name="exp_level">Exp Level:</string>
    <string name="exp_points">Exp Points:</string>
    <string name="header_victories">Victories</string>
    <string name="solo">Solo:</string>
    <string name="_3v3">3v3:</string>
    <string name="duo">Duo:</string>
    <string name="header_extra">Extra</string>
    <string name="best_robo_rumble_time">Best Robo Rumble Time:</string>
    <string name="qualified_from_championship">Qualified From Championship:</string>
    <string name="best_time_as_big_brawler">Best Time As Big Brawler:</string>
    <string name="brawler_description">Brawler Description</string>
    <string name="brawler_trait">Brawler Trait</string>
    <string name="brawler_attack">Brawler Attack</string>
    <string name="brawler_attacks">Brawler Attacks</string>
    <string name="brawler_super">Brawler Super</string>
    <string name="brawler_supers">Brawler Supers</string>
    <string name="brawler_gadgets">GADGETS</string>
    <string name="placeholder_G1">placeholder_G1</string>
    <string name="placeholder_G2">placeholder_G2</string>
    <string name="brawler_star_powers">STAR POWERS</string>
    <string name="placeholder_S1">placeholder_S1</string>
    <string name="placeholder_S2">placeholder_S2</string>

    <string name="brawl_stars">Brawl Stars</string>
    <string name="header_unlocked_brawlers">Unlocked Brawlers</string>

    <!-- CLAS ROYALE -->
    <string name="favourite_cards">Favourite Cards</string>
    <string name="clash_royale">Clash Royale</string>
    <string name="card_normal">Normal</string>
    <string name="card_evolution">Evolution</string>
    <string name="header_unlocked_cards">Unlocked Cards</string>
    <string name="header_unlocked_badges">Unlocked Badges</string>

    <string name="header_wins">Wins:</string>
    <string name="header_loss">Loss:</string>
    <string name="header_battle_count">Battle Count:</string>
    <string name="header_three_crown_wins">Three Crown Wins:</string>
    <string name="header_arena">Arena:</string>

    <string name="challenge_cards_won">Challenge Cards Won:</string>
    <string name="challenge_max_wins">Challenge Max Wins:</string>
    <string name="tournament_cards_won">Tournament Cards Won:</string>
    <string name="tournament_battle_count">Tournament Battle Count:</string>



</resources>