<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/HeaderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />

    <TextView
        android:id="@+id/HeaderDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brawler_description"
        app:layout_constraintBottom_toTopOf="@+id/txtDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/HeaderTrait"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderDescription" />

    <TextView
        android:id="@+id/HeaderTrait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brawler_trait"
        app:layout_constraintBottom_toTopOf="@+id/txtTrait"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <TextView
        android:id="@+id/txtTrait"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/HeaderAttacks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderTrait" />

    <TextView
        android:id="@+id/HeaderAttacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brawler_attacks"
        app:layout_constraintBottom_toTopOf="@+id/txtFirstAttack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTrait" />

    <TextView
        android:id="@+id/txtFirstAttack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/HeaderSupers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderAttacks" />

    <TextView
        android:id="@+id/HeaderSupers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brawler_super"
        app:layout_constraintBottom_toTopOf="@+id/txtFirstSuper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstAttack" />

    <TextView
        android:id="@+id/txtFirstSuper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/HeaderGadgets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderSupers" />

    <TextView
        android:id="@+id/HeaderGadgets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brawler_gadgets"
        app:layout_constraintBottom_toTopOf="@+id/placeholder_G1"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstSuper" />

    <TextView
        android:id="@+id/placeholder_G1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_G1"
        app:layout_constraintBottom_toTopOf="@+id/txtFirstGadget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderGadgets" />

    <TextView
        android:id="@+id/txtFirstGadget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/placeholder_G2"
        app:layout_constraintEnd_toStartOf="@id/guidelineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholder_G1" />

    <TextView
        android:id="@+id/placeholder_G2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_G2"
        app:layout_constraintBottom_toTopOf="@+id/txtSecondGadget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstGadget" />

    <TextView
        android:id="@+id/txtSecondGadget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/HeaderStarPowers"
        app:layout_constraintEnd_toStartOf="@id/guidelineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholder_G2" />

    <TextView
        android:id="@+id/HeaderStarPowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brawler_star_powers"
        app:layout_constraintBottom_toTopOf="@+id/placeholder_S1"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSecondGadget" />

    <TextView
        android:id="@+id/placeholder_S1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_S1"
        app:layout_constraintBottom_toTopOf="@+id/txtFirstStarPower"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderStarPowers" />

    <TextView
        android:id="@+id/txtFirstStarPower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/placeholder_S2"
        app:layout_constraintEnd_toStartOf="@id/guidelineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholder_S1" />

    <TextView
        android:id="@+id/placeholder_S2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_S2"
        app:layout_constraintBottom_toTopOf="@+id/txtSecondStarPower"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstStarPower" />

    <TextView
        android:id="@+id/txtSecondStarPower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeholder_S2"
        android:layout_marginStart="5dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <ImageView
        android:id="@+id/imgDefaultSkin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/img_default_skin" />

    <ImageView
        android:id="@+id/imgFirstGadget"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtFirstGadget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toTopOf="@+id/txtFirstGadget"
        android:contentDescription="@string/img_first_gadget" />

    <ImageView
        android:id="@+id/imgSecondGadget"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtSecondGadget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toTopOf="@+id/txtSecondGadget"
        android:contentDescription="@string/img_second_gadget" />

    <ImageView
        android:id="@+id/imgFirstStarPower"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtFirstStarPower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toTopOf="@+id/txtFirstStarPower"
        android:contentDescription="@string/img_first_starpower" />

    <ImageView
        android:id="@+id/imgSecondStarPower"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@id/txtSecondStarPower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtSecondStarPower"
        app:layout_constraintTop_toTopOf="@+id/txtSecondStarPower"
        android:contentDescription="@string/img_second_starpower" />

    <ProgressBar
        android:id="@+id/detailsProgressBarDefaultSkin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/imgDefaultSkin"
        app:layout_constraintEnd_toEndOf="@id/imgDefaultSkin"
        app:layout_constraintStart_toStartOf="@id/imgDefaultSkin"
        app:layout_constraintTop_toTopOf="@id/imgDefaultSkin" />

    <ProgressBar
        android:id="@+id/detailsProgressBarFirstGadget"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imgFirstGadget"
        app:layout_constraintEnd_toEndOf="@+id/imgFirstGadget"
        app:layout_constraintStart_toStartOf="@+id/imgFirstGadget"
        app:layout_constraintTop_toTopOf="@+id/imgFirstGadget" />

    <ProgressBar
        android:id="@+id/detailsProgressBarSecondGadget"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/imgSecondGadget"
        app:layout_constraintEnd_toEndOf="@id/imgSecondGadget"
        app:layout_constraintStart_toStartOf="@id/imgSecondGadget"
        app:layout_constraintTop_toTopOf="@id/imgSecondGadget" />

    <ProgressBar
        android:id="@+id/detailsProgressBarFirstStarPower"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/imgFirstStarPower"
        app:layout_constraintEnd_toEndOf="@id/imgFirstStarPower"
        app:layout_constraintStart_toStartOf="@id/imgFirstStarPower"
        app:layout_constraintTop_toTopOf="@id/imgFirstStarPower" />

    <ProgressBar
        android:id="@+id/detailsProgressBarSecondStarPower"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/imgSecondStarPower"
        app:layout_constraintEnd_toEndOf="@id/imgSecondStarPower"
        app:layout_constraintStart_toStartOf="@id/imgSecondStarPower"
        app:layout_constraintTop_toTopOf="@id/imgSecondStarPower" />

</androidx.constraintlayout.widget.ConstraintLayout>